--- a/Views/Meeting/List.cshtml
+++ b/Views/Meeting/List.cshtml
@@ -1,9 +1,8 @@
-<h1>Toplantıya Katılım Listesi</h1>
-<table>
+<h1 class="h4">Toplantıya Katılım Listesi</h1>
+<table class="table table-bordered">
     <thead>
     <tr>
         <td>Ad</td>
-        <td>Email</td>
         <td>Katılım Durumu</td>
         <td></td>
     </tr>
@@ -11,18 +10,16 @@
     <tbody>
     <tr>
         <td>Merve Ekşi</td>
-        <td>merveeksii61@gmail.com</td>
         <td>Evet</td>
         <td>
-            <a href="#">Detay</a>
+            <a class="btn btn-sm btn-primary" href="#">Detay</a>
         </td>
     </tr>
     <tr>
         <td>Alp Giray Üstün</td>
-        <td>alpgirayustun@gmail.com</td>
         <td>Evet</td>
         <td>
-            <a href="#">Detay</a>
+            <a class="btn btn-sm btn-primary" href="#">Detay</a>
         </td>
     </tr>
     </tbody>
