--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -4,13 +4,13 @@
     Layout = "_Layout2";
 }
 <main class="text-center">
-    <h1 class="h4">@ViewData["Selamlama"] @ViewData["UserName"]</h1>
+    <h1 class="h4">@ViewData["Selamlama"]</h1>
     <p>Toplantı katılım durumunuzu bildiriniz.</p>
 
     <div class="card my-2">
         <ul class="list-group list-group-flush">
             <li class="list-group-item">@Model.Location</li>
-            <li class="list-group-item">@Model.Date.ToString("dd/MM/yyyy HH:mm:ss") tarihinde gerçekleşecek</li>
+            <li class="list-group-item">@Model.Date.ToString("dd/MM/yyyy HH:mm:ss") tarihinde gerçekleşecek.</li>
             <li class="list-group-item">@Model.NumberOfPeople Katılımcıları</li>
         </ul>
     </div>
