--- a/Views/Meeting/Apply.cshtml
+++ b/Views/Meeting/Apply.cshtml
@@ -3,7 +3,8 @@
     ViewBag.Title = "Başvuru Formu";
 }
 <h1 class="h4 text-center">Toplantı Katılım Formu</h1>
-<form method="post" action="/Meeting/Apply">
+<form method="post" action="/Meeting/Apply" novalidate>
+    <div asp-validation-summary="All"></div>
     <div class="mb-3">
         <label asp-for="Name" class="form-label">Name</label>
         <input asp-for="Name" class="form-control">
@@ -11,14 +12,15 @@
     <div class="mb-3">
         <label asp-for="Phone" class="form-label">Phone</label>
         <input asp-for="Phone" class="form-control">
-    </div> 
+    </div>
     <div class="mb-3">
         <label asp-for="Email" class="form-label">Email</label>
         <input asp-for="Email" class="form-control">
-    </div> 
+    </div>
     <div class="mb-3">
         <label asp-for="WillAttend" class="form-label">Katılım Durumu</label>
         <select asp-for="WillAttend" class="form-select">
+            <option value="">Seçiniz</option>
             <option value="true">Evet, Geliyorum</option>
             <option value="false">Hayır, Gelmiyorum</option>
         </select>
